Updated HTML & CSS, added practise.js for recording and transcription

--- a/practise.html
+++ b/practise.html
@@ -60,7 +60,7 @@
                 <h2></i>🎤Recording Studio</h2>
                 <hr>
                 <div class="mic"><i class="fa fa-microphone"></i></div>
-                <p>click to start recording</p>
+                <p class="start-recording">click to start recording</p>
                 <div class="controls">
                     <button class="pr">▶ Play</button>
                     <button class="pr">⟳ Reset</button>
@@ -111,5 +111,5 @@
         </div>
     </div>
 </body>
-
+<script src="practise.js"></script>
 </html>
